--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -18,6 +18,7 @@
                 <span class="title-first__main">ТУРЫ НА ВОЗДУШНОМ ШАРЕ</span>
                 <span class="title-first__secondary">незабываемое приключение ждет вас</span>
             </h1>
+            <a class="btn" href="#">Наш каталог</a>
         </div>
     </header>
    </div>
