--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -1,27 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
 
-   <div class="container">
-    <header class="header">
-        <img class="header__logo" src="img/icons/Icon-logo.svg" alt="logo balloon">
-        <div class="header__box">
-            <h1 class="title-first">
-                <span class="title-first__main">ТУРЫ НА ВОЗДУШНОМ ШАРЕ</span>
-                <span class="title-first__secondary">незабываемое приключение ждет вас</span>
-            </h1>
-            <a class="btn btn_animated" href="#">Наш каталог</a>
-        </div>
-    </header>
-   </div>
+    <div class="container">
+        <header class="header">
+            <img class="header__logo" src="img/icons/Icon-logo.svg" alt="logo balloon">
+            <div class="header__box">
+                <h1 class="title-first">
+                    <span class="title-first__main">ТУРЫ НА ВОЗДУШНОМ ШАРЕ</span>
+                    <span class="title-first__secondary">незабываемое приключение ждет вас</span>
+                </h1>
+                <a class="btn btn_animated" href="#">Наш каталог</a>
+            </div>
+        </header>
+    </div>
 
+    <section class="grid-test">
+
+        <div class="row">
+            <div class="col-1-of-2">
+                col-1-of-2
+            </div>
+            <div class="col-1-of-2">
+                col-1-of-2
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-3">
+                col-1-of-3
+            </div>
+            <div class="col-1-of-3">
+                col-1-of-3
+            </div>
+            <div class="col-1-of-3">
+                col-1-of-3
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-3">
+                col-1-of-3
+            </div>
+            <div class="col-2-of-3">
+                col-2-of-3
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+            <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+            <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+            <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+            <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+            <div class="col-2-of-4">
+                col-2-of-4
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+            <div class="col-3-of-4">
+                col-3-of-4
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
