--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -25,9 +25,22 @@
                 <a class="btn btn_animated" href="#">Наш каталог</a>
             </div>
         </header>
+
+        <main>
+            <section class="section-about">
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-secondary">
+                        невероятное ощущение свободы
+                    </h2>
+                </div>
+            
+            </section>
+        </main>   
+
+
     </div>
 
-    <section class="grid-test">
+    <!-- <section class="grid-test">
 
         <div class="row">
             <div class="col-1-of-2">
@@ -94,7 +107,7 @@
                 col-3-of-4
             </div>
         </div>
-    </section>
+    </section> -->
 </body>
 
 </html>
