--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -33,9 +33,41 @@
                         невероятное ощущение свободы
                     </h2>
                 </div>
-            
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="title-third margin-bottom-10px">
+                            ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ
+                        </h3>
+                        <p class="paragraph margin-bottom-30px">
+                            Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет
+                            за собой процесс внедрениям и модернизации соответствующий условий активизации. Таким
+                            образом начало повседневной работы по формированию позиции влечет.
+                        </p>
+
+                        <h3 class="title-third margin-bottom-10px">
+                            ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ
+                        </h3>
+                        <p class="paragraph margin-bottom-50px">
+                            Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет
+                            за собой процесс внедрения и модернизации соответствующий условий активизации. Таким образом
+                            начало повседневной работы по формированию позиции влечет.
+                        </p>
+
+                        <a href="#" class="btn-text">Узнать больше &rarr;</a>
+
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="" alt="" class="composition__photo composition__photo_n1">
+                            <img src="" alt="" class="composition__photo composition__photo_n2">
+                            <img src="" alt="" class="composition__photo composition__photo_n3">
+                        </div>
+                    </div>
+                </div>
+
             </section>
-        </main>   
+        </main>
 
 
     </div>
