--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -59,9 +59,9 @@
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="" alt="" class="composition__photo composition__photo_n1">
-                            <img src="" alt="" class="composition__photo composition__photo_n2">
-                            <img src="" alt="" class="composition__photo composition__photo_n3">
+                            <img src="img/photo-balloons-1.png" alt="photo-balloons-1" class="composition__photo composition__photo_n1">
+                            <img src="img/photo-balloons-2.png" alt="photo-balloons-2" class="composition__photo composition__photo_n2">
+                            <img src="img/photo-balloons-3.png" alt="photo-balloons-3" class="composition__photo composition__photo_n3">
                         </div>
                     </div>
                 </div>
