--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -8,6 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/icon-fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -59,12 +60,53 @@
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="img/photo-balloons-1.png" alt="photo-balloons-1" class="composition__photo composition__photo_n1">
-                            <img src="img/photo-balloons-2.png" alt="photo-balloons-2" class="composition__photo composition__photo_n2">
-                            <img src="img/photo-balloons-3.png" alt="photo-balloons-3" class="composition__photo composition__photo_n3">
+                            <img src="img/photo-balloons-3.png" alt="photo-balloons-1"
+                                class="composition__photo composition__photo_n1">
+                            <img src="img/photo-balloons-1.png" alt="photo-balloons-2"
+                                class="composition__photo composition__photo_n2">
+                            <img src="img/photo-balloons-2.png" alt="photo-balloons-3"
+                                class="composition__photo composition__photo_n3">
                         </div>
                     </div>
                 </div>
+            </section>
+            <section class="section-adventure">
+
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-3.svg" alt="planet Earth">
+                            <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЕ</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в
+                                особенности же развитие различных</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-2.svg" alt="planet Earth">
+                            <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЕ</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в
+                                особенности же развитие различных</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector.svg" alt="planet Earth">
+                            <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЕ</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в
+                                особенности же развитие различных</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-1.svg" alt="planet Earth">
+                            <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЕ</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в
+                                особенности же развитие различных</p>
+                        </div>
+                    </div>
+                </div>
+
 
             </section>
         </main>
