добавлена заготовка переворачивабщейся при ховере карточки в блоке с турами

--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-adventure">
+            <section class="section-adventure margin-bottom-50px">
 
                 <div class="row">
                     <div class="col-1-of-4">
@@ -106,9 +106,33 @@
                         </div>
                     </div>
                 </div>
-
-
             </section>
+
+            <secction class="section-tour">
+
+                <div class="text-align-center margin-bottom-80px padding-top-80px">
+                    <h2 class="title-secondary ">
+                        наиболее популярные туры
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card-tour">
+                           <div class="card-tour__side card-tour__side_front">front</div>
+                           <div class="card-tour__side card-tour__side_back">back</div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        col-1-of-3
+                    </div>
+                    <div class="col-1-of-3">
+                        col-1-of-3
+                    </div>
+                </div>
+        
+            </secction>
+
         </main>
 
 
