были добавлены стили для переддней стороны карточки в тур блоке

--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -75,7 +75,8 @@
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="adventure-card">
-                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-3.svg" alt="planet Earth">
+                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-3.svg"
+                                alt="planet Earth">
                             <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЕ</h3>
                             <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в
                                 особенности же развитие различных</p>
@@ -83,7 +84,8 @@
                     </div>
                     <div class="col-1-of-4">
                         <div class="adventure-card">
-                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-2.svg" alt="planet Earth">
+                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-2.svg"
+                                alt="planet Earth">
                             <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЕ</h3>
                             <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в
                                 особенности же развитие различных</p>
@@ -91,7 +93,8 @@
                     </div>
                     <div class="col-1-of-4">
                         <div class="adventure-card">
-                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector.svg" alt="planet Earth">
+                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector.svg"
+                                alt="planet Earth">
                             <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЕ</h3>
                             <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в
                                 особенности же развитие различных</p>
@@ -99,7 +102,8 @@
                     </div>
                     <div class="col-1-of-4">
                         <div class="adventure-card">
-                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-1.svg" alt="planet Earth">
+                            <img class="adventure-card__icon margin-bottom-30px" src="img/icons/Vector-1.svg"
+                                alt="planet Earth">
                             <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЕ</h3>
                             <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в
                                 особенности же развитие различных</p>
@@ -119,8 +123,24 @@
                 <div class="row">
                     <div class="col-1-of-3">
                         <div class="card-tour">
-                           <div class="card-tour__side card-tour__side_front">front</div>
-                           <div class="card-tour__side card-tour__side_back">back</div>
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img margin-bottom-50px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">групповые </span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">туры</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Группы от 6 человек</li>
+                                        <li>Продолжительность 2 часа</li>
+                                        <li>В группе 1 гид</li>
+                                        <li>Дальность полета 6км</li>
+                                        <li>Бесплатные сувениры</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">back</div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
@@ -130,7 +150,7 @@
                         col-1-of-3
                     </div>
                 </div>
-        
+
             </secction>
 
         </main>
