--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -124,7 +124,7 @@
                     <div class="col-1-of-3">
                         <div class="card-tour">
                             <div class="card-tour__side card-tour__side_front">
-                                <div class="card-tour__img margin-bottom-50px"></div>
+                                <div class="card-tour__img card-tour__img_1 margin-bottom-50px"></div>
                                 <h4 class="card-tour__title">
                                     <span class="card-tour__span card-tour__span_1">групповые </span>
                                     <br>
@@ -140,15 +140,74 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="card-tour__side card-tour__side_back">back</div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">полная стоимость</p>
+                                    <p class="card-tour__text card-tour__text_2">5990₽</p>
+                                    <a class="btn" href="#">забронировать</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
-                        col-1-of-3
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_2 margin-bottom-50px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">частные </span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">туры</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Группы от 6 человек</li>
+                                        <li>Продолжительность 2 часа</li>
+                                        <li>В группе 1 гид</li>
+                                        <li>Дальность полета 6км</li>
+                                        <li>Бесплатные сувениры</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">полная стоимость</p>
+                                    <p class="card-tour__text card-tour__text_2">5990₽</p>
+                                    <a class="btn" href="#">забронировать</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-1-of-3">
-                        col-1-of-3
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_3 margin-bottom-50px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">смотровая </span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">площадка</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Группы от 6 человек</li>
+                                        <li>Продолжительность 2 часа</li>
+                                        <li>В группе 1 гид</li>
+                                        <li>Дальность полета 6км</li>
+                                        <li>Бесплатные сувениры</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">полная стоимость</p>
+                                    <p class="card-tour__text card-tour__text_2">5990₽</p>
+                                    <a class="btn" href="#">забронировать</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                </div>
+                <div class="text-align-center">
+                    <a class="btn" href="#">забронировать</a>
                 </div>
 
             </secction>
