--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -206,12 +206,60 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-align-center">
+                <div class="text-align-center margin-bottom-80px">
                     <a class="btn" href="#">забронировать</a>
                 </div>
-
             </secction>
-
+            <section class="section-feedback ">
+                <div class="text-align-center  margin-bottom-80px">
+                    <h2 class="title-secondary title-secondary_white">
+                        отззывы наших клиентов
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="feedback-card">
+                        <figure class="feedback-card_img">
+                            <img src="img/photos/man.jpg" alt="person">
+                            <figcaption class="feedback-card__name">
+                                вася батарейкин
+                            </figcaption>
+                        </figure>
+                        <div class="feedback-card_box">
+                            <h3 class="title-third margin-bottom-10px">
+                                я получил массу впечатлений
+                            </h3>
+                            <p class="paragraph margin-bottom-30px">
+                                Задача организации, в особенности же дальнейшее развитие различных форм деятельности
+                                влечет за собой процесс внедрения и модернизации соответствующий условий активизации.
+                                Таким образом начало повседневной работы по формированию позиции влечет.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="feedback-card">
+                        <figure class="feedback-card_img">
+                            <img src="img/photos/woman.jpg" alt="person">
+                            <figcaption class="feedback-card__name">
+                                some customer
+                            </figcaption>
+                        </figure>
+                        <div class="feedback-card_box">
+                            <h3 class="title-third margin-bottom-10px">
+                                ЭТО БЫЛО ВЕЛИКОЛЕПНО И НЕЗАБЫВАЕМО
+                            </h3>
+                            <p class="paragraph margin-bottom-30px">
+                                Задача организации, в особенности же дальнейшее развитие различных форм деятельности
+                                влечет за собой процесс внедрения и модернизации соответствующий условий активизации.
+                                Таким образом начало повседневной работы по формированию позиции влечет.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-align-center margin-bottom-80px">
+                    <a class="btn" href="#">забронировать</a>
+                </div>
+            </section>
         </main>
 
 
