--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -211,6 +211,11 @@
                 </div>
             </secction>
             <section class="section-feedback ">
+                <div class="bg-gradient"></div>
+                <video class="bg-video" autoplay muted loop>
+                    <source src="img/videos/hot-air-balloons-1.mp4">
+                    <source src="img/videos/hot-air-balloons-2.webm"> 
+                </video>
                 <div class="text-align-center  margin-bottom-80px">
                     <h2 class="title-secondary title-secondary_white">
                         отззывы наших клиентов
@@ -241,7 +246,7 @@
                         <figure class="feedback-card_img">
                             <img src="img/photos/woman.jpg" alt="person">
                             <figcaption class="feedback-card__name">
-                                some customer
+                                клава пупкина
                             </figcaption>
                         </figure>
                         <div class="feedback-card_box">
