добавлены стили для контейнера формы. Добавлены стили с анимациями для инпутов

--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -214,7 +214,7 @@
                 <div class="bg-gradient"></div>
                 <video class="bg-video" autoplay muted loop>
                     <source src="img/videos/hot-air-balloons-1.mp4">
-                    <source src="img/videos/hot-air-balloons-2.webm"> 
+                    <source src="img/videos/hot-air-balloons-2.webm">
                 </video>
                 <div class="text-align-center  margin-bottom-80px">
                     <h2 class="title-secondary title-secondary_white">
@@ -263,6 +263,30 @@
                 </div>
                 <div class="text-align-center margin-bottom-80px">
                     <a class="btn" href="#">забронировать</a>
+                </div>
+            </section>
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="text-align-center margin-bottom-30px">
+                                    <h2 class="title-secondary">
+                                        забронировать тур
+                                    </h2>
+                                </div>
+                                <div class="form__group">
+                                    <input type="text" class="form__input" placeholder="Имя Фамилия" id="name" required>
+                                    <label for="name" class="form__lable">Ваше имя и фамилия</label>
+                                </div>
+                                <div class="form__group">
+                                    <input type="email" class="form__input" placeholder="Имя Фамилия" id="email"
+                                        required>
+                                    <label for="email" class="form__lable">Ваше емэйл</label>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
