добавлен кастомный радиобаттон с псевдоэлементами

--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -277,12 +277,30 @@
                                 </div>
                                 <div class="form__group">
                                     <input type="text" class="form__input" placeholder="Имя Фамилия" id="name" required>
-                                    <label for="name" class="form__lable">Ваше имя и фамилия</label>
+                                    <label for="name" class="form__label">Ваше имя и фамилия</label>
                                 </div>
                                 <div class="form__group">
                                     <input type="email" class="form__input" placeholder="Имя Фамилия" id="email"
                                         required>
-                                    <label for="email" class="form__lable">Ваше емэйл</label>
+                                    <label for="email" class="form__label">Ваше емэйл</label>
+                                </div>
+
+                                <div class="form__group">
+                                    <div class="form__group-radio">
+                                        <input type="radio" class="form__input-radio" id="tour-1" name="checked">
+                                        <label for="tour-1" class="form__label-radio">
+                                            <span class="form__button-radio"></span>
+                                            Групповой тур</label>
+                                    </div>
+                                    <div class="form__group-radio">
+                                        <input type="radio" class="form__input-radio" id="tour-2" name="checked">
+                                        <label for="tour-2" class="form__label-radio">
+                                            <span class="form__button-radio"></span>
+                                            Индивидуальный тур</label>
+                                    </div>
+                                </div>
+                                <div class="form__group">
+                                    <button class="btn btn_brown">Забронировать</button>
                                 </div>
                             </form>
                         </div>
