--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -308,7 +308,22 @@
                 </div>
             </section>
         </main>
-
+        <footer class="footer">
+            <div class="row text-align-center">
+                <a href="#">
+                    <img class="footer__logo" src="img/icons/Icon-logo.svg" alt="logo">
+                </a>
+            </div>
+            <div class="row">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">о нас</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">скидки</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">лучшие туры</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">калькулятор цен</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">связаться с нами</a></li>
+                </ul>
+            </div>
+        </footer>
 
     </div>
 
