--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -16,6 +16,22 @@
 <body>
 
     <div class="container">
+
+        <div class="navigation">
+            <input type="checkbox" class="navigation__toggle" id="navi-toggle">
+            <label for="navi-toggle" class="navigation__button">Menu</label>
+            <div class="navigation__background"></div>
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#" class="navigation__link">о нас</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">скидки</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">лучшие туры</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">калькулятор цен</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">связаться с нами</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <header class="header">
             <img class="header__logo" src="img/icons/Icon-logo.svg" alt="logo balloon">
             <div class="header__box">
@@ -287,7 +303,7 @@
 
                                 <div class="form__group">
                                     <div class="form__group-radio">
-                                        <input type="radio" class="form__input-radio" id="tour-1" name="checked">
+                                        <input type="radio" class="form__input-radio" id="tour-1" name="checked"> 
                                         <label for="tour-1" class="form__label-radio">
                                             <span class="form__button-radio"></span>
                                             Групповой тур</label>
