добавлены медиазапросы к *html для адаптива

--- a/project-balloons/index.html
+++ b/project-balloons/index.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/icon-fonts.css">
+    <!-- <link rel="stylesheet" href="css/icon-fonts.txt"> -->
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
